# VelocityORM

./: README.md  VELOCITYORM_TECHNICAL_PAPER.md  pom.xml
spring-petclinic-velocityorm/: pom.xml
spring-petclinic-velocityorm-arrow/: docker-compose.yml  pom.xml
spring-petclinic-velocityorm/src/main/resources/: application.properties
velocity-orm-arrow/: pom.xml
velocity-orm-arrow/src/main/java/com/velocityorm/arrow/: ArrowMapper.java  ArrowRepository.java  VelocityArrow.java
velocity-orm-benchmarks/: dependency-reduced-pom.xml  pom.xml
velocity-orm-benchmarks/src/main/java/com/velocityorm/benchmark/: ORMPerformanceBenchmark.java
velocity-orm-core/: pom.xml
velocity-orm-core/src/main/java/com/velocityorm/core/: VelocityORM.java
velocity-orm-core/src/main/java/com/velocityorm/core/tx/: Session.java  (+4 more)
velocity-orm-native/: pom.xml
velocity-orm-native/src/main/java/com/velocityorm/nativeorm/: NativeCRUDOptimizer.java  NativeDataProcessor.java  NativeRowIdentity.java
velocity-orm-native/src/main/rust/: Cargo.toml
velocity-orm-native/src/main/rust/src/: lib.rs
velocity-orm-native/src/test/java/com/velocityorm/nativeorm/: TestNative.java
velocity-orm-processor/: pom.xml
velocity-orm-processor/src/main/java/com/velocityorm/processor/: VelocityORMProcessor.java
velocity-orm-reactive/: pom.xml
velocity-orm-reactive/src/main/java/com/velocityorm/reactive/: ReactiveRepository.java  ReactiveRepositoryImpl.java
velocity-orm-test/: pom.xml
velocity-orm-test/src/test/java/com/velocityorm/test/: VelocityORMIntegrationTest.java  VelocityORMUnitTest.java
(+63 files in other folders)
