[package]
name = "velocity_orm_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "velocity_orm_native"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
chrono = "0.4.37"
itoa = "1.0.11"
dtoa = "1.0.9"
simd-json = "0.13.9"
dashmap = "5.5.3"
once_cell = "1.19.0"
